--- a/.github/workflows/post-to-steem.yml
+++ b/.github/workflows/post-to-steem.yml
@@ -40,8 +40,8 @@ jobs:
           TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
         run: |
-            echo "is_telegram_set: ${{ env.TELEGRAM_TO != '' && TELEGRAM_TOKEN != '' }}"
-            echo "::set-output name=is_telegram_set::${{ env.TELEGRAM_TO != '' && TELEGRAM_TOKEN != '' }}"
+            echo "is_telegram_set: ${{ env.TELEGRAM_TO != '' && env.TELEGRAM_TOKEN != '' }}"
+            echo "::set-output name=is_telegram_set::${{ env.TELEGRAM_TO != '' && env.TELEGRAM_TOKEN != '' }}"
       - name: 'Send telegram message'
         uses: appleboy/telegram-action@master
         if: |
