--- a/.github/workflows/post-to-steem.yml
+++ b/.github/workflows/post-to-steem.yml
@@ -43,13 +43,14 @@ jobs:
             echo "is_telegram_set: ${{ env.TELEGRAM_TO != '' && env.TELEGRAM_TOKEN != '' }}"
             echo "::set-output name=is_telegram_set::${{ env.TELEGRAM_TO != '' && env.TELEGRAM_TOKEN != '' }}"
       - name: 'Send telegram message'
-        uses: appleboy/telegram-action@master
         if: |
           steps.processor.outputs.issue_number != 0 &&
           steps.check_telegram.outputs.is_telegram_set != 'false'
-        with:
+        env:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             Hi, I have posted the issue to Steem.
             https://github.com/${{ github.repository }}/issues/${{ steps.processor.outputs.issue_number }}
+        run: |
+          curl  -s --data-urlencode "text=${message}" https://api.telegram.org/bot${token}/sendMessage?chat_id=${to}
